--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "p-limit": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.5.0",
     "tsx": "^4.19.0",
-    "typescript": "^5.5.0"
+    "typescript": "^5.5.0",
+    "@types/node": "^22.5.0"
   }
 }
